# log

./: log.cpp  log.h  readme.md
test/: CMakeLists.txt  log_test.cpp  test_log.cpp
